put imports into seperate folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,24 +10,26 @@
   <meta name="author" content="SitePoint">
 
   <!-- This is the 'importing' of external libraries. -->
-    <link href="static/contextMenu/contextMenu.css"  rel="stylesheet" type="text/css" />
+    <link href="static/frozen_from_web/contextMenu/contextMenu.css"  rel="stylesheet" type="text/css" />
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>-->
-    <script src="static/jquery-3.3.1.min.js"></script>
+    <script src="static/frozen_from_web/jquery-3.3.1.min.js"></script>
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script> -->
-    <script src="static/moment.min.js" type="text/javascript"></script>
+    <script src="static/frozen_from_web/moment.min.js" type="text/javascript"></script>
     <!--<script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
-    <script src="static/plotly-latest.min.js"></script>
+    <script src="static/frozen_from_web/plotly-latest.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script> -->
-    <script src="static/d3.min.js"></script>
+    <script src="static/frozen_from_web/d3.min.js"></script>
     <!--<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script> -->
-    <script src="static/jquery.dataTables.min.js"></script>
+    <script src="static/frozen_from_web/jquery.dataTables.min.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="static/jquery.dataTables.min.css">
-    <script src="static/contextMenu/contextMenu.js"></script>
-    <script src="static/dataTables.cellEdit.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/frozen_from_web/jquery.dataTables.min.css">
+    <script src="static/frozen_from_web/contextMenu/contextMenu.js"></script>
+    <script src="static/frozen_from_web/dataTables.cellEdit.js"></script>
     <script src="static/results_tabs.js"></script>
     <script src="static/plot_results.js"></script>
+    <script src="static/add_and_delete_cases.js"></script>
     <script src="static/case_info_tab.js"></script>
+    <script src="static/control_content_in_case_info_tabs.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
