--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,11 @@
     <script src="static/control_content_in_case_info_tabs.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="static/build_tariff_selectors.js"></script>
+    <script src="static/build_tariff_table.js"></script>
+    <script src="static/save_tariff.js"></script>
+    <script src="static/tariff_type_tabs.js"></script>
+
 
   <style>
 
@@ -165,7 +170,6 @@
       }
 
       .tabcontent {
-        display: none;
         border-style: groove;
         border-width: 0.25%;
         height: 100%;
@@ -190,6 +194,17 @@
         box-sizing: border-box;
         padding: 1%;
         width: 100%;
+        overflow: hidden;
+      }
+
+      .tariff_type_tab_content {
+        border-style: groove;
+        border-width: 0.25%;
+        height: 100%;
+        box-sizing: border-box;
+        padding: 1%;
+        width: 100%;
+        overflow: hidden;
       }
 
        .case_info_tab_content {
@@ -261,6 +276,11 @@
         <button class='case_delete_button' style="float: left;"
                 onclick="delete_case(this)">&times;</button>
     </div>
+
+    <table class="tariff_table display nowrap" style="width: 100%; height: 85%;">
+        <thead class="tariff_table_header"></thead>
+        <tbody class="tariff_table_body"></tbody>
+    </table>
 
 </head>
 
@@ -531,133 +551,91 @@
                             <tbody id="info_tariff_table_body"></tbody>
                         </table>
                     </div>
-                    <div class="case_info_tab_content" id="demog_info">
-
-                    </div>
-
+                    <div class="case_info_tab_content" id="demog_info"></div>
                 </div>
             </div>
-
             <script>document.getElementById("default_results_tab").click();</script>
             <script>document.getElementById("default_case_info_tab").click();</script>
         </div>
-
         <div id="tariff_selection_panel" class="main_tab_content">
-            <div id="upper_tariff_section" class="row" style="height: 30%;">
-                <div id="left_tariff_col"  class="col" style="width: 15%">
-                    <div class="label_stacked">Type:</div>
-                    <div class="label_stacked">State:</div>
-                    <div class="label_stacked">Provider:</div>
-                    <div class="label_stacked">Year:</div>
-                    <div class="label_stacked">Tariff:</div>
-                </div>
-                <div id="middle_tariff_col" class="col" style="width: 30%">
-                    <select id="select_tariff_type" class="tariff_filter">
-                        <option selected="selected">Select1</option>
-                    </select>
-                    <select id="select_tariff_state" class="tariff_filter">
-                        <option selected="selected">Select1</option>
-                    </select>
-                    <select id="select_tariff_provider" class="tariff_filter">
-                        <option selected="selected">Select1</option>
-                    </select>
-                    <select id="select_tariff_year" class="tariff_filter">
-                        <option selected="selected">Select1</option>
-                    </select>
-                    <select id="select_tariff">
-                        <option selected="selected">Select1</option>
-                    </select>
-                </div>
+            <div id="tariff_type_tabs" class="tab_button_area" style="height: 5%">
+                <button class="tariff_type_links" value="DUOS"
+                        onclick="displayTariffType(event, 'network_tariff_selection_panel')">Network tariffs</button>
+                <button id="default_tariff_type_tab" class="tariff_type_links" value="NUOS"
+                        onclick="displayTariffType(event, 'retail_tariff_selection_panel')">Retail tariffs</button>
             </div>
-            <script src="static/build_tariff_selectors.js"></script>
-            <script src="static/build_tariff_table.js"></script>
-            <script src="static/save_tariff.js"></script>
-            <div id="lower_tariff_section" class="row" style="height: 70%;">
-                <script src="static/tariff_tabs.js"></script>
-                <div id="tariff_panel_header" class="row" style="height: 20%;">
-                    <div id="name_label" class="col" style="width: 5%;">Name:</div>
-                    <div id="name_value" class="col" style="width: 20%;">N/A</div>
-                    <div id="type_label" class="col" style="width: 5%;">Type:</div>
-                    <div id="type_value" class="col" style="width: 20%;">N/A</div>
-                    <div id="state_label" class="col" style="width: 5%;">State:</div>
-                    <div id="state_value" class="col" style="width: 20%;">N/A</div>
-                    <div id="add_case" style="width: 20%;" class="col" onclick="get_default_case_name(event)"><button>Add</button></div>
-                </div>
-                <div id="tariff_tabs" class="tab_button_area" style="height: 5%">
-                    <button class="tablinks" value="DUOS" onclick="displayTariff(event, 'DUOS')">DUOS</button>
-                    <button class="tablinks" value="TUOS" onclick="displayTariff(event, 'TUOS')">TUOS</button>
-                    <button class="tablinks" value="DTUOS" onclick="displayTariff(event, 'DTUOS')">DUOS+TUOS</button>
-                    <button id="default_tab" class="tablinks" value="NUOS"
-                            onclick="displayTariff(event, 'NUOS')">NUOS</button>
-                </div>
-                <div id="DUOS" class="tabcontent" style="height: 70%;">
-                    <div id="DUOS_header" class="row" style="height: 20%">
-                        <div style="float: left;">Daily Charge ($/day):</div>
-                        <input id="DUOS_daily_charge" type="text" value="" style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
-                        <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
-                        <input id="DUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
+            <div id="tariff_type_container" style="height: 95%; width: 100%; overflow: hidden;">
+                <div id="network_tariff_selection_panel" class="tariff_type_tab_content">
+                    <div class="upper_tariff_section row" style="height: 30%;"></div>
+                    <script>$("#network_tariff_selection_panel .upper_tariff_section").load("tariff_selectors",
+                                function(){
+                                    get_tariff_options("network_tariff_selection_panel")
+                                    $('#network_tariff_selection_panel .select_tariff').on('change', function() {
+                                        get_tariff('network_tariff_selection_panel');
+                                    });
+                              });</script>
+                    <div class="lower_tariff_section row" style="height: 70%;">
+                        <div class="tariff_panel_header row" style="height: 20%;"></div>
+                        <script>$("#network_tariff_selection_panel .tariff_panel_header").load("tariff_panel_header");</script>
+                        <script src="static/tariff_tabs.js"></script>
+                        <div id="tariff_tabs" class="tab_button_area" style="height: 5%">
+                            <button class="tablinks" value="DUOS"
+                                    onclick="displayTariff(event, 'network_tariff_selection_panel', 'DUOS')">DUOS</button>
+                            <button class="tablinks" value="TUOS" onclick="displayTariff(event, 'network_tariff_selection_panel', 'TUOS')">TUOS</button>
+                            <button class="tablinks" value="DTUOS" onclick="displayTariff(event, 'network_tariff_selection_panel', 'DTUOS')">DUOS+TUOS</button>
+                            <button id="network_default_tab" class="tablinks" value="NUOS"
+                                    onclick="displayTariff(event, 'network_tariff_selection_panel', 'NUOS')">NUOS</button>
+                        </div>
+                        <div style="height: 70%; width: 100%; overflow: hidden;">
+                            <div id="DUOS" class="tabcontent" style="overflow: scroll-y"></div>
+                            <div id="TUOS" class="tabcontent"></div>
+                            <div id="DTUOS" class="tabcontent"></div>
+                            <div id="NUOS" class="tabcontent"></div>
+                        </div>
+                        <div class="save_mod_tariff_option" style="height: 5%">
+                            <input class="save_mod_tariff_name" style="width: 50%;">
+                            <button class="save_mod_button" onclick="get_tariff_then_save(event)">Save</button>
+                        </div>
+                        <script>document.getElementById("network_default_tab").click();</script>
                     </div>
-                    <div>
-                        <table id="DUOS_tariff_table" class="display nowrap" style="width: 100%; height:85%;">
-                            <thead class="tariff_table_header" id="DUOS_tariff_table_header"></thead>
-                            <tbody id="DUOS_tariff_table_body"></tbody>
-                        </table>
-                    </div>
+                </div>
+                <div id="retail_tariff_selection_panel" class="tariff_type_tab_content">
+                    <div class="upper_tariff_section row" style="height: 30%;"></div>
+                    <script>$("#retail_tariff_selection_panel .upper_tariff_section").load("tariff_selectors",
+                                function(){
+                                    get_tariff_options("retail_tariff_selection_panel")
+                                    $('#retail_tariff_selection_panel .select_tariff').on('change', function() {
+                                        get_tariff('retail_tariff_selection_panel');
+                                    });
+                             });</script>
+                    <div class="lower_tariff_section row" style="height: 70%;">
+                        <div class="tariff_panel_header row" style="height: 20%;"></div>
+                        <script>$("#retail_tariff_selection_panel .tariff_panel_header").load("tariff_panel_header");
+                        </script>
 
-                </div>
-                <div id="TUOS" class="tabcontent" style="height: 70%;">
-                    <div id="TUOS_header" class="row" style="height: 20%">
-                        <div style="float: left;">Daily Charge ($/day):</div>
-                        <input id="TUOS_daily_charge" type="text" value="" style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
-                        <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
-                        <input id="TUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
-                    </div>
-                    <div>
-                        <table id="TUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                            <thead class="tariff_table_header" id="TUOS_tariff_table_header"></thead>
-                            <tbody id="TUOS_tariff_table_body"></tbody>
-                        </table>
-                    </div>
-                </div>
-                <div id="DTUOS" class="tabcontent" style="height: 70%;">
-                    <div id="DTUOS_header" class="row" style="height: 10%">
-                        <div style="float: left;">Daily Charge ($/day):</div>
-                        <input id="DTUOS_daily_charge" type="text" value="" style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
-                        <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
-                        <input id="DTUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
-                    </div>
-                    <div>
-                        <table id="DTUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                            <thead class="tariff_table_header" id="DTUOS_tariff_table_header"></thead>
-                            <tbody id="DTUOS_tariff_table_body"></tbody>
-                        </table>
+                        <script src="static/tariff_tabs.js"></script>
+                        <div class="tariff_tabs tab_button_area" style="height: 5%">
+                            <button id="retail_default_tab" class="tablinks" value="Retail"
+                                    onclick="displayTariff(event, 'retail_tariff_selection_panel', 'Retail')">
+                                Retail
+                            </button>
+                        </div>
+                        <div style="height: 70%; width: 100%; overflow: hidden;">
+                            <div id="Retail" class="tabcontent">
+                                <script>$(function(){$("#Retail").load("tariff_table");});</script>
+                            </div>
+                        </div>
+                        <div class="save_mod_tariff_option" style="height: 5%">
+                            <input class="save_mod_tariff_name" style="width: 50%;">
+                            <button class="save_mod_button" onclick="get_tariff_then_save(event)">Save</button>
+                        </div>
+                        <script>document.getElementById("retail_default_tab").click();</script>
                     </div>
                 </div>
-                <div id="NUOS" class="tabcontent"  style="height: 70%;">
-                    <div id="NUOS_header" class="row" style="height: 10%">
-                        <div style="float: left;">Daily Charge ($/day):</div>
-                        <input id="NUOS_daily_charge" type="text" value="" style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
-                        <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
-                        <input id="NUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
-                    </div>
-                    <div>
-                        <table id="NUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                            <thead class="tariff_table_header" id="NUOS_tariff_table_header"></thead>
-                            <tbody id="NUOS_tariff_table_body"></tbody>
-                        </table>
-                    </div>
-                </div>
-                <div id="save_mod_tariff_option" style="height: 5%">
-                    <input id="save_mod_tariff_name" style="width: 50%;">
-                    <button id="save_mod_button" onclick="get_tariff_then_save(event)">Save</button>
-                </div>
-                <script>document.getElementById("default_tab").click();</script>
             </div>
         </div>
-
     </div>
-
-
+    <script>document.getElementById("default_tariff_type_tab").click();</script>
   </div>
   <script>document.getElementById("default_panel").click();</script>
 </div>
