--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
     <script src="static/frozen_from_web/plotly-latest.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script> -->
     <script src="static/frozen_from_web/d3.min.js"></script>
-    <!--<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script> -->
-    <script src="static/frozen_from_web/jquery.dataTables.min.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="static/frozen_from_web/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <!--<script src="static/frozen_from_web/jquery.dataTables.min.js"></script> -->
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="static/frozen_from_web/jquery.dataTables.min.css"> -->
     <script src="static/frozen_from_web/contextMenu/contextMenu.js"></script>
     <script src="static/frozen_from_web/dataTables.cellEdit.js"></script>
     <script src="static/results_tabs.js"></script>
@@ -259,7 +259,7 @@
         display: none
       }
 
-      .dataTables_scrollBody {
+      .dataTables {
          border-bottom: 0 !important;
       }
 
@@ -285,7 +285,7 @@
                 onclick="delete_case(this)">&times;</button>
     </div>
 
-    <table class="tariff_table display nowrap" style="width: 100%; height: 85%;">
+    <table class="tariff_table display nowrap" style="width: 100%; display: none; border-bottom: 0 !important;">
         <thead class="tariff_table_header"></thead>
         <tbody class="tariff_table_body"></tbody>
     </table>
