saving first pass working

--- a/templates/tariff_panel_header.html
+++ b/templates/tariff_panel_header.html
@@ -4,6 +4,6 @@
 <div class="type_label col" style="width: 20%;">N/A</div>
 <div class="state_label col" style="width: 5%;">State:</div>
 <div class="state_value col" style="width: 20%;">N/A</div>
-<div style="width: 20%;" class="add_case col" onclick="get_default_case_name(event)">
+<div style="width: 20%;" class="add_case col" onclick="get_default_case_name(event, this)">
     <button>Add</button>
 </div>
