--- a/templates/index.html
+++ b/templates/index.html
@@ -581,10 +581,25 @@
                                     $('#network_tariff_selection_panel .select_tariff').on('change', function() {
                                         get_tariff('network_tariff_selection_panel');
                                     });
+                                    $('#network_tariff_selection_panel .tariff_filter').on('change', function() {
+                                        get_tariff_options('network_tariff_selection_panel');
+                                    });
                               });</script>
                     <div class="lower_tariff_section row" style="height: 70%;">
-                        <div class="tariff_panel_header row" style="height: 20%;"></div>
-                        <script>$("#network_tariff_selection_panel .tariff_panel_header").load("tariff_panel_header");</script>
+                        <div class="tariff_panel_header row" style="height: 20%;">
+                            <div class="tariff_panel_header row" style="height: 20%;">
+                            <div class="name_label col" style="width: 5%;">Name:</div>
+                            <div class="name_value col" style="width: 20%;">N/A</div>
+                            <div class="col" style="width: 5%;">Type:</div>
+                            <div class="type_label col" style="width: 20%;">N/A</div>
+                            <div class="state_label col" style="width: 5%;">State:</div>
+                            <div class="state_value col" style="width: 20%;">N/A</div>
+                            <div style="width: 20%;" class="add_case col"
+                                 onclick="get_default_case_name(event, 'network_tariff_selection_panel')">
+                                <button>Add</button>
+                            </div>
+                        </div>
+                        </div>
                         <script src="static/tariff_tabs.js"></script>
                         <div id="tariff_tabs" class="tab_button_area" style="height: 5%">
                             <button class="tablinks" value="DUOS"
@@ -602,7 +617,8 @@
                         </div>
                         <div class="save_mod_tariff_option" style="height: 5%">
                             <input class="save_mod_tariff_name" style="width: 50%;">
-                            <button class="save_mod_button" onclick="get_tariff_then_save(event)">Save</button>
+                            <button class="save_mod_button"
+                                    onclick="get_tariff_then_save(event, 'network_tariff_selection_panel')">Save</button>
                         </div>
                         <script>document.getElementById("network_default_tab").click();</script>
                     </div>
@@ -615,12 +631,23 @@
                                     $('#retail_tariff_selection_panel .select_tariff').on('change', function() {
                                         get_tariff('retail_tariff_selection_panel');
                                     });
+                                $('#retail_tariff_selection_panel .tariff_filter').on('change', function() {
+                                        get_tariff_options('retail_tariff_selection_panel');
+                                    });
                              });</script>
                     <div class="lower_tariff_section row" style="height: 70%;">
-                        <div class="tariff_panel_header row" style="height: 20%;"></div>
-                        <script>$("#retail_tariff_selection_panel .tariff_panel_header").load("tariff_panel_header");
-                        </script>
-
+                        <div class="tariff_panel_header row" style="height: 20%;">
+                            <div class="name_label col" style="width: 5%;">Name:</div>
+                            <div class="name_value col" style="width: 20%;">N/A</div>
+                            <div class="col" style="width: 5%;">Type:</div>
+                            <div class="type_label col" style="width: 20%;">N/A</div>
+                            <div class="state_label col" style="width: 5%;">State:</div>
+                            <div class="state_value col" style="width: 20%;">N/A</div>
+                            <div style="width: 20%;" class="add_case col"
+                                 onclick="get_default_case_name(event, 'retail_tariff_selection_panel')">
+                                <button>Add</button>
+                            </div>
+                        </div>
                         <script src="static/tariff_tabs.js"></script>
                         <div class="tariff_tabs tab_button_area" style="height: 5%">
                             <button id="retail_default_tab" class="tablinks" value="Retail"
@@ -633,7 +660,8 @@
                         </div>
                         <div class="save_mod_tariff_option" style="height: 5%">
                             <input class="save_mod_tariff_name" style="width: 50%;">
-                            <button class="save_mod_button" onclick="get_tariff_then_save(event)">Save</button>
+                            <button class="save_mod_button"
+                                    onclick="get_tariff_then_save(event, 'network_tariff_selection_panel')">Save</button>
                         </div>
                         <script>document.getElementById("retail_default_tab").click();</script>
                     </div>
