--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,15 @@
     <!--<script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
     <script src="static/frozen_from_web/plotly-latest.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script> -->
-    <script src="static/frozen_from_web/d3.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <!--<script src="static/frozen_from_web/jquery.dataTables.min.js"></script> -->
-    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="static/frozen_from_web/jquery.dataTables.min.css"> -->
+    <!-- <script src="static/frozen_from_web/d3.min.js"></script> -->
+    <!--<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script> -->
+    <script src="static/frozen_from_web/jquery.dataTables.min.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">-->
+    <link rel="stylesheet" type="text/css" href="static/frozen_from_web/jquery.dataTables.min.css">
+    <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
+    <script src="static/frozen_from_web/jquery-ui-1.12.1/jquery-ui.js"></script>
+    <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
+    <link rel="stylesheet" type="text/css" href="static/frozen_from_web/jquery-ui-1.12.1/jquery-ui.css">
     <script src="static/frozen_from_web/contextMenu/contextMenu.js"></script>
     <script src="static/frozen_from_web/dataTables.cellEdit.js"></script>
     <script src="static/results_tabs.js"></script>
@@ -30,8 +34,6 @@
     <script src="static/add_and_delete_cases.js"></script>
     <script src="static/case_info_tab.js"></script>
     <script src="static/control_content_in_case_info_tabs.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="static/build_tariff_selectors.js"></script>
     <script src="static/build_tariff_table.js"></script>
     <script src="static/save_tariff.js"></script>
@@ -241,7 +243,7 @@
         color: #EEEEEE
       }
 
-      #save_mod_tariff_option {
+      .save_mod_tariff_option {
         display: none;
       }
 
@@ -588,11 +590,11 @@
                     <div class="lower_tariff_section row" style="height: 70%;">
                         <div class="tariff_panel_header row" style="height: 20%;">
                             <div class="tariff_panel_header row" style="height: 20%;">
-                            <div class="name_label col" style="width: 5%;">Name:</div>
+                            <div class="name_label col" style="width: 5%;">Name:&nbsp</div>
                             <div class="name_value col" style="width: 20%;">N/A</div>
-                            <div class="col" style="width: 5%;">Type:</div>
-                            <div class="type_label col" style="width: 20%;">N/A</div>
-                            <div class="state_label col" style="width: 5%;">State:</div>
+                            <div class="type_label col" style="width: 5%;">Type:&nbsp</div>
+                            <div class="type_value col" style="width: 20%;">N/A</div>
+                            <div class="state_label col" style="width: 5%;">State:&nbsp</div>
                             <div class="state_value col" style="width: 20%;">N/A</div>
                             <div style="width: 20%;" class="add_case col"
                                  onclick="get_default_case_name(event, 'network_tariff_selection_panel')">
@@ -637,13 +639,13 @@
                              });</script>
                     <div class="lower_tariff_section row" style="height: 70%;">
                         <div class="tariff_panel_header row" style="height: 20%;">
-                            <div class="name_label col" style="width: 5%;">Name:</div>
-                            <div class="name_value col" style="width: 20%;">N/A</div>
-                            <div class="col" style="width: 5%;">Type:</div>
-                            <div class="type_label col" style="width: 20%;">N/A</div>
-                            <div class="state_label col" style="width: 5%;">State:</div>
+                            <div class="name_label col" style="width: 5%;">Name:&nbsp</div>
+                            <div class="name_value col" style="width: 30%;">N/A</div>
+                            <div class="type_label col" style="width: 5%;">Type:&nbsp</div>
+                            <div class="type_value col" style="width: 20%;">N/A</div>
+                            <div class="state_label col" style="width: 5%;">State:&nbsp</div>
                             <div class="state_value col" style="width: 20%;">N/A</div>
-                            <div style="width: 20%;" class="add_case col"
+                            <div style="width: 10%;" class="add_case col"
                                  onclick="get_default_case_name(event, 'retail_tariff_selection_panel')">
                                 <button>Add</button>
                             </div>
@@ -661,7 +663,7 @@
                         <div class="save_mod_tariff_option" style="height: 5%">
                             <input class="save_mod_tariff_name" style="width: 50%;">
                             <button class="save_mod_button"
-                                    onclick="get_tariff_then_save(event, 'network_tariff_selection_panel')">Save</button>
+                                    onclick="get_tariff_then_save(event, 'retail_tariff_selection_panel')">Save</button>
                         </div>
                         <script>document.getElementById("retail_default_tab").click();</script>
                     </div>
